# carrion-spine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
carrion_spine/: __init__.py  apply.py  commands.py  config.py  config_loader.py  database.py  diffing.py  discovery.py  permissions.py  readiness.py  sessions.py  validation.py
carrion_spine/ai/: __init__.py  contracts.py  patch_apply.py  policy.py  providers.py  redaction.py
carrion_spine/cli/: __init__.py  main.py
docs/: ai.md  architecture.md  commands.md  discord-bot-setup.md  docker.md  install.md  security.md  systemd.md
tests/: __init__.py  test_ai.py  test_config_and_doctor.py
